packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/responses/bad/statustext_nostatus.cbor
¡kstatus_textx>Example with a status_text field, but no required status field